# VMFlow-Wrapper

./: ARCHITECTURE_REFACTOR_PLAN.md  Cargo.toml  README.md  TODO.md  build.rs
compiler_configs/: 1. vbsp.toml  2. vvis.toml  3. vrad.toml  5. game.toml  bspzip.toml  vbsp_info.toml  vpk.toml
compilers/: 1. vbsp.toml  2. vvis.toml  3. vrad.toml  4. copy.toml  5. game.toml  bspzip.toml  vbsp_info.toml  vpk.toml
compilers/builtin/: shutdown.toml
compilers_types/: Cargo.toml
compilers_types/src/: lib.rs
crates/compilation_core/: Cargo.toml
crates/compilation_core/src/: lib.rs  types.rs
crates/compilation_core/src/map_pipeline/: builtin_commands.rs  execute_handler.rs  mod.rs
crates/compiler_data_model/: Cargo.toml
crates/compiler_data_model/src/: lib.rs
crates/compiler_logs_process/: Cargo.toml
crates/compilers_service/: Cargo.toml  build.rs
crates/compilers_service/src/: lib.rs
crates/compilers_types/: Cargo.toml
crates/compilers_types/src/: lib.rs
crates/config_types/: Cargo.toml
crates/networking_core/: Cargo.toml
crates/vmflow/: Cargo.toml
crates/vmflow/src/: app.rs  main.rs  settings.rs
crates/vmflow/src/backend/: mod.rs
crates/vmflow/src/ui/: constants.rs  mod.rs  themes.rs
crates/vmflow/src/ui/compile_info/: mod.rs
crates/vmflow/src/ui/general/: buttons_panel.rs  mod.rs  render_apps_grid.rs
crates/vmflow/src/ui/presets/: command_line_preview.rs  mod.rs  parameters_editor.rs  preset_selector.rs  process_buttons.rs  process_list.rs  viewports.rs
crates/vmflow/src/ui/presets/viewports/: create_new_preset.rs  parameter_chooser.rs  process_chooser.rs
crates/vmflow/src/ui/settings/: collapse_menu.rs  config_editor.rs  mod.rs  theme_selector.rs
crates/vmflow_config_types/: Cargo.toml
crates/vmflow_config_types/src/: lib.rs  parameter_override.rs  preset.rs  selected_compiler.rs
src/: app.rs  compilers.rs  main.rs  settings.rs
src/backend/: builtin_commands.rs  mod.rs
src/ui/: buttons_panel.rs  mod.rs  utils.rs
src/ui/compile_info/: mod.rs
src/ui/general/: buttons_panel.rs  mod.rs  render_apps_grid.rs
src/ui/presets/: command_line_preview.rs  mod.rs  parameters_editor.rs  preset_selector.rs  process_buttons.rs  process_list.rs  viewports.rs
src/ui/presets/viewports/: create_new_preset.rs  parameter_chooser.rs  process_chooser.rs
src/ui/settings/: collapse_menu.rs  config_editor.rs  dir_field.rs  mod.rs  theme_selector.rs
