[package]
name = "hammer_time"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["compilers_types"]

[dependencies]
compilers_types = { path = "compilers_types" }
eframe = "0.31.1" # 0.31.0 now has a critical bug with TextEdit 
egui_extras = "0.31.1"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.26"
fern = "0.7"
include_dir = { version = "0.7.4", features = ["glob"] }
toml = "0.8.20"
egui_flex = "0.3.0"


[build-dependencies]
toml = "0.8.20"
compilers_types = { path = "compilers_types" }
winresource = "0.1.20"

[lints.rust]
unused = { level = "allow", priority = -1 } # For exploratory dev.
