[workspace]
resolver = "2"
members = [
    "crates/vmflow", 
    "crates/compilation_core", 
    "crates/compilers_types", 
    "crates/config_types", 
    "crates/compiler_logs_process", 
    "crates/networking_core"
]
default-members = ["crates/vmflow"]

[workspace.package]
publish = false
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
#
# Workspace member crates
#
compilation_core = { path = "crates/compilation_core" }
compilers_types = { path = "crates/compilers_types" }
config_types = { path = "crates/config_types" }
compiler_logs_process = { path = "crates/compiler_logs_process" }
networking_core = { path = "crates/networking_core" }

[workspace.lints.rust] # For exploratory dev only.
unused = { level = "allow", priority = -1 } 
dead_code = { level = "allow", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"