[workspace]
resolver = "2"
members = [
    "crates/vmflow", 
    "crates/compilation_core", 
    "crates/compiler_data_model", 
    "crates/vmflow_config_types", 
    "crates/compiler_logs_process", 
    "crates/networking_core", 
    "crates/compilers_service",
]
default-members = ["crates/vmflow"]

[workspace.package]
publish = false
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
#
# Workspace member crates
#
compilation_core = { path = "crates/compilation_core" }
compiler_data_model = { path = "crates/compiler_data_model" }
compilers_service = { path = "crates/compilers_service" }
vmflow_config_types = { path = "crates/vmflow_config_types" }
compiler_logs_process = { path = "crates/compiler_logs_process" }
networking_core = { path = "crates/networking_core" }

serde = { version = "1.0.219", features = ["derive"] }

[workspace.lints.rust] # For exploratory dev only.
unused = { level = "allow", priority = -1 } 
dead_code = { level = "allow", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
