[package]
name = "compilers_service"
publish.workspace = true
edition.workspace = true
version.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
compiler_data_model.workspace = true

include_dir = { version = "0.7.4", features = ["glob"] }
toml = "0.8.20"

[build-dependencies]
compiler_data_model.workspace = true
toml = "0.8.20" # toml здесь нужен для build.rs
