[package]
name = "vmflow"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
compilation_core.workspace = true
compilers_types.workspace = true
config_types.workspace = true
compiler_logs_process.workspace = true
networking_core.workspace = true

eframe = "0.31.1"
egui_extras = "0.31.1"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
rfd = "0.15.3"

serde = { version = "1.0.219", features = ["derive"] }
confy = "0.6.1"
log = "0.4.26"
fern = "0.7"
include_dir = { version = "0.7.4", features = ["glob"] }
toml = "0.8.20"
egui_dnd = "=0.12.0"
walkdir = "2.5.0"


[build-dependencies]
toml = "0.8.20"
compilers_types.workspace = true
winresource = "0.1.20"
