[package]
name = "vmflow"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
compilation_core.workspace = true
compiler_data_model.workspace = true
vmflow_config_types.workspace = true
compilers_service.workspace = true
compiler_logs_process.workspace = true
networking_core.workspace = true

eframe = "0.31.1"
egui_extras = "0.31.1"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
rfd = "0.15.3"

serde.workspace = true
confy = "0.6.1"
log = "0.4.26"
fern = "0.7"
egui_dnd = "=0.12.0"
walkdir = "2.5.0"
